objects/SubAccountContact__c.object
<CustomObject>
    <fields>
        <fullName>AccountofSubAccount__c</fullName>
        <formula>SubAccount__r.Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountofSubAccount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>SubAccountContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marked_for_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marked for Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ParentContactUpdated__c</fullName>
        <label>ParentContactUpdated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SAP_Number__c</fullName>
        <displayFormat>{0000000}</displayFormat>
        <label>SAP Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SubAccountSAPID__c</fullName>
        <formula>SubAccount__r.SAP_Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SubAccountSAPID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Account</label>
        <referenceTo>Sub_Account__c</referenceTo>
        <relationshipName>SubAccountContacts</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>